# not-large-model

./: .gitignore  README.md  pyproject.toml
scripts/: run.py
src/not_large_model/: dataset.py  eval.py  model.py  predict.py  probe.py  train.py  vocab.py
src/not_large_model/scripts/: run.py
tests/: test_dataset.py  test_model.py  test_vocab.py
