[project]
name = "not-large-model"
version = "0.1.0"
description = "Tiny LLM experiment: modular addition on Z5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "torch",
    "tqdm>=4.67.3",
]

[project.scripts]
not-large-model = "not_large_model.scripts.run:main"
not-large-model-predict = "not_large_model.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/not_large_model"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
